--- a/gen key.html
+++ b/gen key.html
@@ -91,6 +91,6 @@
     <!-- Button to copy the key -->
     <button onclick="copyKey()">Copy Key</button>
 
-    <p>Use this key to access <a href="enterKey.html">the access page</a>.</p>
+    <p>Use this key to access <a href="https://bokit-bip.github.io/emulatorjs/">the access page</a>.</p>
 </body>
 </html>
